<resources>
    <string name="app_name">GithubUsersApp</string>
    <string name="title_action_bar">Github Users</string>
    <string name="menu_search">Search</string>
    <string name="menu_language">Change Language</string>
    <string name="search_hint">Enter Name</string>
    <string name="cd_user_avatar">User Avatar</string>
    <string name="user_login">Username</string>
    <string name="menu_refresh">Refresh</string>
    <string name="user_name">Name</string>
    <string name="user_location">Location</string>
    <string name="user_company">Company</string>
    <string name="user_bio">Bio</string>
    <string name="user_repos">Repositories : %1$d</string>
    <string name="followers">%1$d\nFollowers</string>
    <string name="following">%1$d\nFollowing</string>
    <string name="loading">Loading...</string>
    <string name="warning">Warning!</string>
    <string name="image_warning">image warning</string>
    <string name="error">Error</string>
    <string name="error_message">error message</string>
    <string name="settings">Settings</string>
    <string name="favorite">Favorite</string>
    <string name="title_action_bar_favorite">Favorite</string>
    <string name="snackbar_no_data">No Data</string>
    <string name="title_action_bar_settings">Settings</string>
    <string name="set_key_alarm">set_alarm</string>
    <string name="set_sum_alarm">repeat everyday at 09.00 am</string>
    <string name="set_title_alarm">Set Alarm</string>
    <string name="set_key_language">set_language</string>
    <string name="set_title_language">Change Language</string>
    <string name="alarm_message">Let\'s check popular github user</string>
    <string name="alarm_title">Reminder to Open App</string>
    <string name="alarm_active">Alarm Active</string>
    <string name="alarm_non_active">Alarm Non Active</string>
    <string name="remove_favorite">Favorite Removed</string>
    <string name="add_favorite">Favorite Added</string>
</resources>