<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.activity.DetailActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:orientation="vertical"
                android:paddingHorizontal="32dp"
                android:paddingTop="12dp"
                android:paddingBottom="8dp">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/iv_avatar"
                    android:layout_width="110dp"
                    android:layout_height="110dp"
                    android:layout_gravity="center_horizontal"
                    android:src="@color/colorAccent"
                    app:civ_border_color="@android:color/white"
                    app:civ_border_width="1dp" />

                <TextView
                    android:id="@+id/tv_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="4dp"
                    android:gravity="center_horizontal"
                    android:text="@string/user_name"
                    android:textAlignment="center"
                    android:textColor="@android:color/white"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="4dp"
                    android:text="@string/user_login"
                    android:textColor="@android:color/white" />

                <TextView
                    android:id="@+id/tv_repos"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="4dp"
                    android:text="@string/user_repos"
                    android:textColor="@android:color/white"
                    android:textSize="12sp"
                    android:visibility="invisible" />

                <TextView
                    android:id="@+id/tv_company"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:drawableStart="@drawable/ic_business_black_18dp"
                    android:drawablePadding="8dp"
                    android:text="@string/user_company"
                    android:textColor="@android:color/white"
                    android:visibility="invisible" />

                <TextView
                    android:id="@+id/tv_location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:drawableStart="@drawable/ic_baseline_place_24"
                    android:drawablePadding="8dp"
                    android:text="@string/user_location"
                    android:textColor="@android:color/white"
                    android:visibility="invisible" />

                <TextView
                    android:id="@+id/tv_bio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:marqueeRepeatLimit="marquee_forever"
                    android:maxLines="3"
                    android:text="@string/user_bio"
                    android:textColor="@android:color/white"
                    android:visibility="invisible" />
            </LinearLayout>

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/tabs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                app:tabTextColor="@android:color/white" />

            <androidx.viewpager.widget.ViewPager
                android:id="@+id/view_pager"
                android:layout_width="match_parent"
                android:layout_height="400dp" />
        </LinearLayout>

        <include
            android:id="@+id/loading_bar_layout"
            layout="@layout/loading_bar"
            android:layout_width="match_parent"
            android:layout_height="720dp" />
    </RelativeLayout>
</ScrollView>